Fixed playing youtube on mobile.

--- a/style.scss
+++ b/style.scss
@@ -187,6 +187,8 @@ $logo-size: 40px;
 
         overflow: auto;
 
+        z-index: 0;
+
         iframe {
             position: absolute;
             top: 0; left: 0; right: 0; bottom: 0;
